Fixed spacing issues

--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,7 @@ body {
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
     margin: 0px;
-    padding: 8rem;
+    padding: 2rem 6rem 2rem 6rem;
     font-family: montserrat,sans-serif;
     font-weight: 400;
 }
@@ -152,7 +152,6 @@ img {
     grid-column: 1 / -1;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 200px;
 }
 
 .bottomCard {
